# kaleidoscope-puzzle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
boards/: boards.json  boards_1.json  boards_2.json  pieces.json  scraped-boards.json  shapes.json
doc/: tmp.ppm
frontend/: boards.json  index.html
frontend/js/: gamecontent.js  render.js
python/: convertBoards.py  generateBitpatterns.py  generateDocumentationFigures.py  makeBoardFigures.py  parseBoard.py  pieces.txt  pieces2.txt  pieces3.txt
solver/: Cargo.toml
solver/src/: game.rs  main.rs
src/: game.rs  kaleidoscope.rs  lib.rs  main.rs  solver.rs
src/game/: generator.rs  mod.rs  solver.rs
