[package]
name = "solver"
version = "0.1.0"
edition = "2021"
authors = ["Shiva Peri"]

[lib]
name = "kaleidoscope_puzzle"
path = "src/lib.rs"

[[bin]]
name = "kaleidoscope_puzzle_runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
quickbacktrack = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
termion = "2.0.1"
